# bazel-scala-example

./: .bazelrc  .gitignore  .scalafmt.conf  BUILD  README.md  WORKSPACE  intellij.bazelproject  maven-dependencies.yaml  maven_install.json
example-bin/: BUILD  Bar.scala
example-bin/src/main/scala/mypackage/: Bar.scala
example-lib/: BUILD  Foo.scala
example-lib/src/main/java/mypackage/: Greeter.java
example-lib/src/main/scala/mypackage/: Foo.scala
example-lib/src/test/java/mypackage/: TestHello.java
example-lib/src/test/scala/mypackage/: Test.scala
example-lib/test/: Test.scala
example-maven/: BUILD  Maven.scala
example-maven/src/main/scala/mypackage/: Maven.scala
example-maven/src/test/scala/mypackage/: Test.scala
example-scalding/: BUILD  Job1.scala
foo/: BUILD
tools/: coverage.sh  scala.bzl  scala_version.bzl
tools/build_rules/: prelude_bazel
tools/build_rules/scalding/: scalding.bzl
tools/jdk/: BUILD.bazel  jdks.bzl
