load("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "DEFAULT_JAVACOPTS", "DEFAULT_TOOLCHAIN_CONFIGURATION", "JDK9_JVM_OPTS", "default_java_toolchain")

default_java_toolchain(
    name = "java11_toolchain",
    configuration = DEFAULT_TOOLCHAIN_CONFIGURATION,
    javacopts = DEFAULT_JAVACOPTS,
    jvm_opts = JDK9_JVM_OPTS,
    source_version = "11",
    target_version = "11",
    visibility = ["//visibility:public"],
)
